[profile.release]
panic = "unwind"
opt-level = 3
debug = false

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
documentation = "https://learn.onpop.io/"
license = "GPL-3.0"
repository = "https://github.com/r0gue-io/pop-cli"
rust-version = "1.88.0"
version = "0.12.1"

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
assert_cmd = { version = "2.0.14", default-features = false }
async-trait = "0.1"
bytes = { version = "1.10.1", default-features = false }
cargo_toml = { version = "0.20.3", default-features = false }
derivative = { version = "2.2.0", default-features = false }
dirs = { version = "5.0", default-features = false }
duct = { version = "0.13", default-features = false }
env_logger = { version = "0.11.7", default-features = false }
flate2 = "1.0.30"
futures = { version = "1.1.8", default-features = false }
git2 = { version = "0.18", default-features = true, features = ["vendored-openssl"] }
glob = { version = "0.3.1", default-features = false }
hex = { version = "0.4", default-features = false, features = ["std"] }
jsonrpsee = { version = "0.24", default-features = false, features = ["server", "macros"] }
log = { version = "0.4.20", default-features = false }
mockito = { version = "1.4.0", default-features = false }
psvm = { version = "0.3.1", default-features = false }
rustilities = "3.0.1"
smoldot = { version = "0.21.0", default-features = false, features = ["std"] }
tar = { version = "0.4.40", default-features = false }
temp-env = "0.3.6"
tempfile = { version = "3.10", default-features = false }
thiserror = { version = "1.0.58", default-features = false }
tokio-test = { version = "0.4.4", default-features = false }
toml = { version = "0.5.0", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false }

# networking
reqwest = { version = "0.12", default-features = false, features = ["default-tls", "json", "multipart", "stream"] }
tokio = { version = "1.0", default-features = false, features = ["macros", "process", "rt-multi-thread", "net", "signal"] }
url = "2.5.4"

# contracts
subxt-signer = { version = "0.44.0", default-features = false, features = ["subxt", "sr25519"] }
subxt = { version = "0.44.0", default-features = false }
ink_env = { version = "6.0.0-beta.1", features = ["unstable-hostfn"] }
sp-core= { version = "38.0.0", default-features = false }
sp-weights = { version = "33.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.7.5", features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
scale-value = { version = "0.18.0", default-features = false, features = ["from-string", "parser-ss58"] }
contract-build = { version = "6.0.0-beta.1", default-features = false }
contract-extrinsics = { version = "6.0.0-beta.1", default-features = false }
contract-transcode = { version = "6.0.0-beta.1", default-features = false }
heck = { version = "0.5.0", default-features = false }

# parachains
askama = { version = "0.12", default-features = false, features = ["config"] }
regex = { version = "1.10", default-features = false }
walkdir = { version = "2.5", default-features = false }
indexmap = { version = "2.2", default-features = false }
toml_edit = { version = "0.22", features = ["serde"] }
symlink = { version = "0.1", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["preserve_order"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
zombienet-configuration = { version = "0.4.3", default-features = false }
zombienet-sdk = { version = "0.4.3", default-features = false }
git2_credentials = "0.13.0"
cumulus-client-cli = { version = "0.26.0", default-features = false }

# benchmarking
cumulus-primitives-proof-size-hostfunction = "0.15.0"
frame-benchmarking-cli = { version = "51.0.0", default-features = false }
sc-chain-spec = { version = "46.0.0", default-features = false }
sp-runtime = { version = "44.0.0", default-features = false }
sp-statement-store = "23.0.0"

# try-runtime
frame-try-runtime = "0.49.0"
sc-cli = { version = "0.55.0", default-features = false }
sp-version = { version = "42.0.0", default-features = false }

# pop-cli
clap = { version = "4.5", default-features = false, features = ["derive", "string"] }
cliclack = { version = "0.3.1", default-features = false }
console = { version = "0.15", default-features = false }
os_info = { version = "3", default-features = false }
strum = { version = "0.26", default-features = false }
strum_macros = { version = "0.26", default-features = false }

# wallet-integration
axum = { version = "0.7.9", default-features = false, features = ["http1", "json", "tokio"] }
open = { version = "5.3.1", default-features = false }
tower-http = { version = "0.6.2", default-features = false }

# database
bb8 = { version = "0.9.0", default-features = false }
diesel = { version = "2.3.4", default-features = false, features = ["sqlite"] }
diesel-async = { version = "0.7.4", default-features = false, features = ["sqlite", "tokio", "bb8", "migrations"] }
diesel_migrations = { version = "2.3.1", default-features = false }

