[package]
name = "pop-chains"
description = "Library for generating, building and running parachains."
license = "Apache-2.0"
documentation = "https://docs.rs/pop-chains/latest/pop_chains"
edition.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
duct.workspace = true
glob.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
subxt-signer.workspace = true
subxt.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true

askama.workspace = true
indexmap.workspace = true
rustilities = { workspace = true, features = ["manifest"] }
scale.workspace = true
scale-info.workspace = true
scale-value.workspace = true
sp-core.workspace = true
symlink.workspace = true
toml_edit.workspace = true
walkdir.workspace = true
cumulus-client-cli.workspace = true

# Zombienet
zombienet-configuration.workspace = true
zombienet-sdk.workspace = true

# Benchmarking
cumulus-primitives-proof-size-hostfunction.workspace = true
frame-benchmarking-cli.workspace = true
sc-chain-spec.workspace = true
serde.workspace = true
sp-runtime.workspace = true
sp-statement-store.workspace = true

# Try Runtime
frame-try-runtime = { workspace = true, features = ["try-runtime"] }
sc-cli.workspace = true
sp-version.workspace = true

# Pop
pop-common = { path = "../pop-common", version = "0.12.1" }

[dev-dependencies]
# Used in doc tests.
tokio-test.workspace = true

[features]
integration-tests = ["pop-common/integration-tests"]
