[package]
name = "pop-cli"
description = "An all-in-one tool for Polkadot development."
version.workspace = true
edition.workspace = true
documentation.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true

[[bin]]
name = "pop"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
cliclack.workspace = true
console.workspace = true
dirs.workspace = true
duct.workspace = true
env_logger.workspace = true
os_info.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true
url.workspace = true

# contracts
pop-contracts = { path = "../pop-contracts", version = "0.9.0", default-features = false, optional = true }
sp-core = { workspace = true }

# parachains
pop-chains = { path = "../pop-chains", version = "0.9.0", optional = true }
git2 = { workspace = true, optional = true }
regex.workspace = true
tracing-subscriber = { workspace = true, optional = true }

# telemetry
pop-telemetry = { path = "../pop-telemetry", version = "0.9.0", optional = true }

# common
pop-common = { path = "../pop-common", version = "0.9.0" }

# wallet-integration
axum = { workspace = true, optional = true }
open = { workspace = true, optional = true }
tower-http = { workspace = true, features = ["fs", "cors"], optional = true }

[dev-dependencies]
assert_cmd.workspace = true
contract-extrinsics.workspace = true
mockito.workspace = true
subxt.workspace = true
subxt-signer.workspace = true

[features]
default = ["chain", "telemetry", "wasm-contracts"]
contract = ["wasm-contracts"]
contracts = ["polkavm-contracts"]
chain = ["dep:pop-chains", "dep:git2", "dep:tracing-subscriber", "wallet-integration"]
v6 = []
polkavm-contracts = ["pop-contracts/v6", "dep:pop-contracts", "wallet-integration"]
telemetry = ["dep:pop-telemetry"]
v5 = []
wasm-contracts = ["pop-contracts/v5", "dep:pop-contracts", "wallet-integration", "v5"]
wallet-integration = ["dep:axum", "dep:open", "dep:tower-http"]
