[package]
name = "pop-common"
description = "Library that provides a collection of essential utilities and shared functionality for pop."
version = "0.2.0"
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
git2.workspace = true
git2_credentials.workspace = true
regex.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
mockito.workspace = true
tempfile.workspace = true
