[package]
name = "pop-common"
description = "Library that provides a collection of essential utilities and shared functionality for pop."
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
cargo_toml.workspace = true
duct.workspace = true
flate2.workspace = true
git2.workspace = true
git2_credentials.workspace = true
regex.workspace = true
reqwest.workspace = true
scale-info.workspace = true
serde_json.workspace = true
serde.workspace = true
strum.workspace = true
subxt.workspace = true
subxt-signer.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml_edit.workspace = true
url.workspace = true

[dev-dependencies]
mockito.workspace = true
strum_macros.workspace = true
tempfile.workspace = true
