[package]
name = "pop-common"
description = "Library that provides a collection of essential utilities and shared functionality for pop."
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
assert_cmd = { workspace = true, optional = true }
bytes.workspace = true
cargo_toml.workspace = true
clap.workspace = true
contract-build.workspace = true
contract-extrinsics.workspace = true
duct.workspace = true
flate2.workspace = true
git2.workspace = true
git2_credentials.workspace = true
glob.workspace = true
ink_env.workspace = true
regex.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
scale-info.workspace = true
serde_json.workspace = true
serde.workspace = true
sp-core.workspace = true
strum.workspace = true
strum_macros.workspace = true
subxt.workspace = true
subxt-signer.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
url.workspace = true
derivative.workspace = true

[dev-dependencies]
mockito.workspace = true
tempfile.workspace = true
temp-env = { workspace = true, features = ["async_closure"] }

[features]
integration-tests = ["dep:assert_cmd"]
