[package]
description = "Library for generating, building, deploying, and calling ink! smart contracts."
documentation = "https://docs.rs/pop-contracts/latest/pop_contracts"
edition.workspace = true
license = "Apache-2.0"
name = "pop-contracts"
readme = "README.md"
repository.workspace = true
version.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
cargo_toml.workspace = true
duct.workspace = true
once_cell.workspace = true
regex.workspace = true
reqwest.workspace = true
rustilities = { workspace = true, features = ["manifest"]}
scale.workspace = true
semver.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true

heck.workspace = true
ink_env.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sp-core.workspace = true
sp-weights.workspace = true
strum.workspace = true
strum_macros.workspace = true
subxt-signer.workspace = true
subxt.workspace = true
toml.workspace = true

# cargo-contracts
contract-build.workspace = true
contract-extrinsics.workspace = true
contract-transcode.workspace = true
contract-metadata.workspace = true
scale-info.workspace = true

# pop
pop-chains = { path = "../pop-chains", version = "0.13.0" }
pop-common = { path = "../pop-common", version = "0.13.0" }

[dev-dependencies]
# Used in doc tests.
tokio-test.workspace = true
temp-env.workspace = true

[features]
integration-tests = ["pop-common/integration-tests"]
