[package]
name = "pop-fork"
description = "Library for forking live Substrate chains."
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
# Fork-specific
sqlx.workspace = true

# From workspace
bytes.workspace = true
sp-core.workspace = true
subxt.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true

# Pop
pop-common = { path = "../pop-common", version = "0.12.1" }

[dev-dependencies]
hex.workspace = true
tempfile.workspace = true
tokio-test.workspace = true
