[package]
name = "pop-parachains"
description = "Library for generating, building and running parachains."
version = "0.3.0"
license = "Apache-2.0"
documentation = "https://docs.rs/pop-parachains/latest/pop_parachains"
edition.workspace = true
readme = "README.md"
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
duct.workspace = true
flate2.workspace = true
glob.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
hex.workspace = true 

askama.workspace = true
indexmap.workspace = true
reqwest.workspace = true
scale-info.workspace = true
scale-typegen-description.workspace = true
scale-value = { workspace = true }
subxt.workspace = true
symlink.workspace = true
toml_edit.workspace = true
walkdir.workspace = true
# Zombienet
zombienet-sdk.workspace = true
zombienet-support.workspace = true

# Pop
pop-common = { path = "../pop-common", version = "0.3.0" }

[dev-dependencies]
mockito.workspace = true
tokio-test.workspace = true
