[package]
name = "pop-parachains"
description = "Library for generating, building and running parachains."
license = "Apache-2.0"
documentation = "https://docs.rs/pop-parachains/latest/pop_parachains"
edition.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
duct.workspace = true
glob.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
subxt-signer.workspace = true
subxt.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true

askama.workspace = true
indexmap.workspace = true
scale.workspace = true
scale-info.workspace = true
scale-value.workspace = true
sp-core.workspace = true
symlink.workspace = true
toml_edit.workspace = true
walkdir.workspace = true
# Zombienet
zombienet-sdk.workspace = true

# Pop
pop-common = { path = "../pop-common", version = "0.6.0" }

[dev-dependencies]
# Used in doc tests.
tokio-test.workspace = true
