[package]
name = "pop-telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = { workspace = true }
env_logger.workspace = true
hostname.workspace = true
log.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
mockito.workspace = true