[package]
name = "pop-telemetry"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
dirs = { workspace = true }
env_logger.workspace = true
log.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
mockito.workspace = true
tempfile.workspace = true