[package]
name = "pop-telemetry"
description = "Library for collecting anonymous Usage Metrics Collection with Umami."
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
dirs = { workspace = true }
env_logger.workspace = true
log.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
mockito.workspace = true
tempfile.workspace = true